<resources>
    <string name="app_name">Crossdle</string>
    <string name="app_colon">:</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!-- Game -->

    <string name="game_heading_daily">Daily</string>
    <string name="game_heading_random">Random</string>
    <string name="game_attempts">Remaining attempts:</string>
    <string name="game_remaining">20</string>
    <string name="game_random_title">Random</string>

    <!-- Gamebar -->

    <string name="gamebar_heading_title">@string/app_name</string>
    <string name="gamebar_help_settings">Settings Icon</string>
    <string name="gamebar_help_info">Info Icon</string>

    <!-- History -->

    <string name="history_heading_games">Games</string>
    <string name="history_heading_streak">Streak</string>
    <string name="history_heading_wins">Win %</string>
    <string name="history_placeholder_number">2</string>
    <string name="history_placeholder_percent">100%</string>

    <!-- History Item -->

    <string name="history_item_field_title">@string/app_name</string>
    <string name="history_item_field_time">Time</string>
    <string name="history_item_field_correct">Correct Letters</string>
    <string name="history_item_field_attempts">Attempts</string>

    <!-- Keyboard -->

    <string name="keyboard_button_q">Q</string>
    <string name="keyboard_button_w">W</string>
    <string name="keyboard_button_e">E</string>
    <string name="keyboard_button_r">R</string>
    <string name="keyboard_button_t">T</string>
    <string name="keyboard_button_y">Y</string>
    <string name="keyboard_button_u">U</string>
    <string name="keyboard_button_i">I</string>
    <string name="keyboard_button_o">O</string>
    <string name="keyboard_button_p">P</string>

    <string name="keyboard_button_a">A</string>
    <string name="keyboard_button_s">S</string>
    <string name="keyboard_button_d">D</string>
    <string name="keyboard_button_f">F</string>
    <string name="keyboard_button_g">G</string>
    <string name="keyboard_button_h">H</string>
    <string name="keyboard_button_j">J</string>
    <string name="keyboard_button_k">K</string>
    <string name="keyboard_button_l">L</string>

    <string name="keyboard_button_z">Z</string>
    <string name="keyboard_button_x">X</string>
    <string name="keyboard_button_c">C</string>
    <string name="keyboard_button_v">V</string>
    <string name="keyboard_button_b">B</string>
    <string name="keyboard_button_n">N</string>
    <string name="keyboard_button_m">M</string>

    <string name="keyboard_button_enter">ENTER</string>

    <!-- Menu -->

    <string name="play_daily_crossdle">Daily</string>
    <string name="play_random_crossdle">Random</string>
    <string name="history">History</string>
    <string name="settings">Settings</string>

    <!-- Setting -->

    <string name="volume">Volume</string>
    <string name="confirm">Confirm</string>
    <string name="themes">Themes</string>
    <string name="title">Settings</string>

    <!-- Help -->

    <string name="help_crossdle">Fill in each row/column with words that have the same length as
        said row/column. Afterwards press Enter to see if you have guess the correct word. Letters
        that are in the word and are in the correct spot will turn green, letters that are in
        the word but in a different spot will be yellow, and letters not in the word will be gray.
    </string>
    <string name="help_title">How To Play:</string>
    <string name="help_understood_button">Understood</string>


</resources>