<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/linear_layout_game"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".app.activity.GameActivity">

    <androidx.fragment.app.FragmentContainerView
        android:id="@+id/game_fragmentView_gamebar"
        android:name="com.example.crossdle.app.fragment.GamebarFragment"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0"
        tools:layout="@layout/fragment_gamebar" />

    <TextView
        android:id="@+id/game_textView_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0"
        android:gravity="clip_horizontal|center"
        android:paddingTop="42dp"
        android:text="@string/game_heading_daily"
        android:textAlignment="gravity"
        android:textColor="@color/white"
        android:textSize="32sp"
        android:visibility="visible" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/game_textView_attempts"
            android:layout_width="277dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:gravity="center|end"
            android:text="@string/game_attempts"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/game_textView_remaining"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:gravity="center"
            android:text="@string/game_remaining"
            android:textSize="16sp" />
    </LinearLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1">

        <androidx.fragment.app.FragmentContainerView
            android:id="@+id/game_fragmentView_board"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            tools:layout="@layout/fragment_board" />

    </FrameLayout>

    <androidx.fragment.app.FragmentContainerView
        android:id="@+id/game_fragmentView_keyboard"
        android:name="com.example.crossdle.app.fragment.KeyboardFragment"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0"
        tools:layout="@layout/fragment_keyboard" />

</LinearLayout>